Fixed so the Navbar on Mobile isn't wonky anymore.

--- a/app/src/components/Navbar/Navbar.css
+++ b/app/src/components/Navbar/Navbar.css
@@ -62,12 +62,13 @@ cursor: pointer;
         height: 500px;
         position: absolute;
         top:80px;
-        left:-100%;
+        left:-125%;
         opacity: 1;
         transition: all 0.5s ease;
+        z-index: 9999;
     }
     .nav-menu.active{
-        background: #fff;
+        background: rgba(255, 255, 255, 0);
         left:0;
         opacity: 1;
         transition: all 0.5s ease;
